# GDC

./: .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  codegen.sh
.github/workflows/: workflows.yaml
images/: Overview.xcf
include/MLIR/: BuildMLIR.hpp
include/codegen/: codegen.rb  onnx.yaml
include/general/: TypeHelpers.hpp
include/graph/: ExactRappers.hpp  ExactWrappers.hpp  Graph.hpp  GraphBuilder.hpp  GraphVizard.hpp  Handler.hpp  Op.hpp  Operation.hpp  Value.hpp
src/: main.cpp
src/MLIR/: BuildMLIR.cpp
src/graph/: DumpGraphViz.cpp  GraphBuilder.cpp  Value.cpp
tests/: Test.cpp
tests/include/: OpTests.hpp  Test.hpp
